prep repo for deploy

--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ ENC_SECRET='my super secret'
 # API_KEY=10c3d9f8
 
 API_KEY=a1f052eb
+DATABASE_URI='postgresql://postgres:EpyBmy6clVJ6npmh@db.yzceqvdqsirmmprwksgm.supabase.co:5432/postgres'
