--- a/config/config.json
+++ b/config/config.json
@@ -3,6 +3,9 @@
     "database": "movie_tracker",
     "host": "127.0.0.1",
     "dialect": "postgres"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URI"
   }
 
 }
